test: Statistics클래스 테스트 추가